--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,62 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
+:root {
+  @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;1,200&display=swap");
+  font-family: "Poppins", sans-serif, "open-sans";
+  font-size: 16px;
+  --bg-red: #d1101a;
+  --bg-dark: rgb(20, 20, 20);
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins";
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+/* btn classes */
+.btn {
+  background: #d1101a;
+  border-radius: 2px;
+  text-decoration: none;
+  color: white;
+  line-height: normal;
+  padding: 7px 17px;
+  font-weight: 400;
+  font-size: 1rem;
+  cursor: pointer;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+  transition: all 200ms ease;
+  text-align: center;
+}
+
+.btn:hover {
+  background: #e50914;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+}
+.btn-lg {
+  outline: none;
+  border: none;
+  margin-left: 0.3rem;
+}
+.btn-lg:hover {
+  /* padding: 8px 20px; */
+  font-size: 1.2rem;
+}
+
+.btn-mail {
+  background: rgb(56, 56, 56);
+  outline: none;
+  border: none;
+}
+.btn-mail abbr {
+  padding: 0;
+  margin: 0;
+}
